syntax="proto3";

option go_package = "lwm2m-gateway/specs/common/spec";
package main;

//Status code
enum StatusCode {
    STATUS_INVALID = 0; 
    ERR_UNKNOWN = 101;
    ERR_UNKNOWN_DEVICE= 102;
    ERR_FAILED_TO_CONNECT_DEVICE = 103;
    ERR_FAILED_TO_CONNECT_SERVICE = 104;
    STATUS_OK = 200;
    STATUS_CREATED = 201;
    STATUS_DELETED = 202;
    STATUS_CHANGED = 204;
    STATUS_CONTENT = 205;
    STATUS_PARTIAL_CONTENT = 206;
    ERR_BADREQUEST  =  400;
    ERR_UNAUTORISED = 401; // Unauthenticated.
    ERR_FORBIDDEN = 403; //Lack  of Access privilege
    ERR_NOT_FOUND   = 404;
    ERR_METHOD_NOT_ALLOWED   = 405;
    ERR_METHOD_NOT_ACCEPTABLE   = 406;
    ERR_REQUEST_TIMEOUT   = 408;
    ERR_TOO_MANY_REQUESTS   = 429;
    ERR_INTERNAL_SERVER_ERROR = 500;
    ERR_NOT_IMPLEMENTED = 501;
    ERR_BAD_GATEWAY = 502;
    ERR_SERVICE_UNAVAILABLE = 503;
}